force-app/main/default/objects/Backup_Configuration__mdt/Backup_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Stores per-client configuration for the Makini SF Backup solution. One record per client (slug). Values are read by the Cloud Run backup job at runtime.</description>
    <label>Backup Configuration</label>
    <pluralLabel>Backup Configurations</pluralLabel>
</CustomObject>