force-app/main/default/objects/Backup_Configuration__mdt/fields/Backup_Mode__c.field-meta.xml
<CustomField>
    <fullName>Backup_Mode__c</fullName>
    <description>Controls which components to back up. full = data + metadata + files. Use data for records only.</description>
    <label>Backup Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>full</fullName>
                <default>true</default>
                <label>Full (data + metadata + files)</label>
            </value>
            <value>
                <fullName>data</fullName>
                <label>Data only</label>
            </value>
            <value>
                <fullName>metadata</fullName>
                <label>Metadata only</label>
            </value>
            <value>
                <fullName>files</fullName>
                <label>Files only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>