force-app/main/default/objects/Backup_Configuration__mdt/fields/Cloud_Run_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Run_Job_Name__c</fullName>
    <description>Name of the Cloud Run Job to trigger (e.g. sf-backup-voicebrook). Each client typically has their own job.</description>
    <label>Cloud Run Job Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>