force-app/main/default/objects/Backup_Configuration__mdt/fields/Drive_Root_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Drive_Root_Folder_ID__c</fullName>
    <description>Google Drive folder ID where backups for this client are stored. The backup service account must have Editor access to this folder.</description>
    <label>Drive Root Folder ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>