force-app/main/default/objects/Backup_Configuration__mdt/fields/GCP_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>GCP_Project_ID__c</fullName>
    <description>The GCP project ID where Cloud Run jobs and Secret Manager are configured (e.g. makini-sf-backup).</description>
    <label>GCP Project ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>