force-app/main/default/objects/Backup_Configuration__mdt/fields/GCP_Region__c.field-meta.xml
<CustomField>
    <fullName>GCP_Region__c</fullName>
    <description>GCP region where Cloud Run jobs execute (e.g. us-central1).</description>
    <label>GCP Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>