force-app/main/default/objects/Backup_Configuration__mdt/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>Email address(es) to receive backup success/failure alerts. Separate multiple addresses with a semicolon.</description>
    <label>Notification Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>