force-app/main/default/objects/Backup_Configuration__mdt/fields/Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days__c</fullName>
    <description>Number of days to retain backup folders in Google Drive before automatic deletion. Recommended: 90.</description>
    <label>Retention Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>