force-app/main/default/objects/Backup_Configuration__mdt/fields/SF_API_Version__c.field-meta.xml
<CustomField>
    <fullName>SF_API_Version__c</fullName>
    <description>Salesforce REST/Bulk API version used by the backup job (e.g. 62.0). Update when a new API version is required.</description>
    <label>SF API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>