force-app/main/default/objects/Backup_Configuration__mdt/fields/SF_Username__c.field-meta.xml
<CustomField>
    <fullName>SF_Username__c</fullName>
    <description>The Salesforce username of the dedicated integration user that the backup job authenticates as via JWT Bearer Flow.</description>
    <label>SF Integration Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>